Add ability to reset research

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
             <button id="test-btn">Run Test</button>
             <button id="next-btn">Next Penguin</button>
             <button id="start-btn">Start Testing</button>
+            <button id="reset-btn">Reset</button>
         </div>
         
         <div class="results-container">
